app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: santa-cruz-admin-service
spec:
  selector:
    app: csc-admin-portal
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
